promedio de series

--- a/TallerAngular/src/app/serie/serie.component.html
+++ b/TallerAngular/src/app/serie/serie.component.html
@@ -11,20 +11,24 @@
       </thead>
       <tbody>
         <tr *ngFor="let serie of series ; let i = index">
-          <td class="table-secondary">
+          <td class="table-light">
             <dd> {{i+1}} </dd>
           </td>
-          <td class="table-secondary">
+          <td class="table-light">
             <dd><a [href]= "serie.webpage" target="_blank">{{serie.name}}</a></dd>
           </td>
-          <td class="table-secondary">
+          <td class="table-light">
             <dd>{{ serie.channel }}</dd>
           </td>
-          <td class="table-secondary">
+          <td class="table-light">
             <dd>{{ serie.seasons }}</dd>
           </td>
         </tr>
       </tbody>
     </table>
+    <div class="d-flex align-items-start">
+      <h4>Seasons average:</h4>
+      <h4>{{promedio}}</h4>
+  </div>
   </div>
 </div>
